feat: add and configure routes

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,6 +12,7 @@
       class="btn btn-primary d-flex align-items-center gap-2"
       data-bs-toggle="modal"
       data-bs-target="#employeeModal"
+      [routerLink]="'/dashboard/new'"
     >
       <i class="bi bi-plus-lg"></i> Nuevo empleado
     </button>
