--- a/src/app/components/input-employee/input-employee.component.html
+++ b/src/app/components/input-employee/input-employee.component.html
@@ -1,6 +1,5 @@
-<div
-  class="container d-flex justify-content-center align-items-center min-vh-100"
->
+<navbar />
+<div class="container d-flex justify-content-center align-items-center mt-4">
   <form
     action="/api/employees"
     method="post"
@@ -89,7 +88,15 @@
     </div>
 
     <div class="d-flex justify-content-end gap-2 mt-4">
-      <button class="btn btn-outline-light" type="reset">Cancelar</button>
+      <button
+      class="btn btn-success"
+      [routerLink]="'/dashboard'"
+      >
+        <i class="bi bi-arrow-return-left"></i> Volver
+      </button>
+      <button class="btn btn-danger" type="reset">
+        <i class="bi bi-x"> Borrar</i>
+      </button>
       <button class="btn btn-primary" type="submit">
         <i class="bi bi-check2"></i> Guardar
       </button>
